# web3-monitor

./: .rustfmt.toml  Cargo.toml  README.md  build.rs  rust-toolchain.toml
conf/: eth_mainnet.yml  eth_sepolia.yml
src/: app_config.rs  engine.rs  log.rs  main.rs  types.rs
src/collectors/: block_collector.rs  log_collector.rs  mempool_collector.rs  mod.rs
src/executors/: dry_run.rs  flashbots_executor.rs  mempool_executor.rs  mod.rs
src/strategies/: mod.rs  new_block.rs  new_log.rs  new_mempool_tx.rs
src/utilities/: mod.rs
tests/: e2e_test.rs
